19-02-09 Updated table (Jinja2 Template -> Jquery, 70% Success)

--- a/FlaskServer/templates/PAST_insert_page.html
+++ b/FlaskServer/templates/PAST_insert_page.html
@@ -68,3 +68,16 @@
                                                 </th>
                                             </tr>
                                             {% endfor %}
+
+ {% for row in rows %}
+        {% for key, val in row.items() %}
+        <tr>
+            <th> {{ key }}</th>
+            <th> {{ val }}</th>
+            <th>
+                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히
+                </button>
+            </th>
+        </tr>
+        {% endfor %}
+        {% endfor %}
