--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -13,53 +13,111 @@
         window.open(url, popupName, options);
     }
 
-    function hi() {
+    function JSON_parse_convertor(string) {
+        string = string.replace(/'/gi, '"');
+        string = string.replace(/ObjectId\(/gi, '');
+        string = string.replace(/\)/gi, '');
+        string = JSON.parse(string);
 
-        var checkbox = $("input[name=checkbox]:checked");
+        return string;
+    }
 
-        checkbox.each(function (i) {
+    function main_table() {
+        var product_row = $('#all_list').val();
+        var product_info_row = $('#checked_list').val();
+        product_row = JSON_parse_convertor(product_row);
+        product_info_row = JSON_parse_convertor(product_info_row);
 
+        if (product_row.length != product_info_row.length) {
+            alert("DB Length is wrong !");
+        }
+        for (var i = 0; i < product_row.length; i++) {
+            $('#main_table').append(
+                $('<tr>').append(
+                    $('<td><input type="checkbox" name="main_checkbox"/>').append(product_row[i]['model']),
+                    $('<td>').append(product_row[i]['sn']),
+                    $('<td>').append(product_info_row[i]['week']),
+                    $('<td>').append(product_info_row[i]['location'][product_info_row[i]['location'].length - 1]),
+                    $('<td>').append(product_info_row[i]['state'][product_info_row[i]['state'].length - 1]),
+                    $('<td><button type="button" class="btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>'))
+            );
+        }
+    }
 
-            var result = $('input[name="checkbox"]').each(function () {
-                if (this.checked == true) {
-                    //return $('input:checkbox[name="checkbox"]').val();
-                    var a = Array;
-                    a = this.value;
-                    alert(a);
-                }
+    function state_change_table() {
+        var product_row = $('#all_list').val();
+        var product_info_row = $('#checked_list').val();
+        product_row = JSON_parse_convertor(product_row);
+        product_info_row = JSON_parse_convertor(product_info_row);
+        if (product_row.length != product_info_row.length) {
+            alert("DB Length is wrong !");
+        }
+        for (var i = 0; i < product_row.length; i++) {
+            $('#state_table').append(
+                $('<tr>').append(
+                    $('<td><input class="checkbox" type="checkbox" name="check_box" value=""/>').append(product_row[i]['model']),
+                    $('<input type="hidden" name="id" value="">'),
+                    $('<td>').append(product_row[i]['sn']),
+                    $('<td><input type="text" class="form-control" name="location" value="" >'),
+                    $('<td><select class="form-control" name="states" id="state" value="">' +
+                        '<option>재고</option>' +
+                        '<option>판매</option>' +
+                        '<option>기증</option>' +
+                        '<option>내수용</option>' +
+                        '<option>A/S 입고</option>' +
+                        '<option>불량</option>' +
+                        '<option>폐기</option>' +
+                        '</select>'))
+            );
+            //$("#state option:eq(i)").attr("selected", "selected");
+            document.getElementsByName("id")[i].value = product_info_row[i]['_id'];
+            document.getElementsByName("check_box")[i].value = product_info_row[i]['_id'];
+            document.getElementsByName("location")[i].value = product_info_row[i]['location'][product_info_row[i]['location'].length - 1];
+            document.getElementsByName("states")[i].value = product_info_row[i]['state'][product_info_row[i]['state'].length - 1];
+        }
+    }
+
+    function btn_click_event() {
+        $("#selectBtn").click(function () {
+            alert('hi');
+            var rowData = new Array();
+            var tdArr = new Array();
+            var checkbox = $("input[name=main_checkbox]:checked");
+
+            // 체크된 체크박스 값을 가져온다
+            checkbox.each(function (i) {
+                // checkbox.parent() : checkbox의 부모는 <td>이다.
+                // checkbox.parent().parent() : <td>의 부모이므로 <tr>이다.
+                var tr = checkbox.parent().parent().eq(i);
+                var td = tr.children();
+
+                // 체크된 row의 모든 값을 배열에 담는다.
+                rowData.push(tr.text());
+
+                // td.eq(0)은 체크박스 이므로  td.eq(1)의 값부터 가져온다.
+                var no = td.eq(0).text() + ", "
+                var userid = td.eq(1).text() + ", ";
+                var name = td.eq(2).text() + ", ";
+                var email = td.eq(3).text() + ", ";
+
+                // 가져온 값을 배열에 담는다.
+                tdArr.push(no);
+                tdArr.push(userid);
+                tdArr.push(name);
+                tdArr.push(email);
             });
 
+            $("#ex3_Result1").html(" * 체크된 Row의 모든 데이터 = " + rowData);
+            $("#ex3_Result2").html(tdArr);
         });
     }
 
-    function change() {
-        var tmp = $('[name=checkYN[]]').prop('checked'); // 변수에 넣기
-        if (tmp == true) {
-            return $('[name=YN[]]').val('Y');
-        } else {
-            return $('[name=YN[]]').val('N');
-        }
-        alert(tmp);
-
-    }
-
-    $('input:checkbox[name="checkYN"]').each(function () {
-
-        this.checked = true; //checked 처리
-
-        if (this.checked) {//checked 처리된 항목의 값
-
-            alert(this.value);
-
-        }
-
-        if ($('#checkYN').is(":checked")) {
-            $("#YN").val("Y");
-        } else {
-            $("#YN").val("N");
-        }
+    // As Jquery same the [ window.onload = function(){} ]
+    $(document).ready(function () {
+        main_table();
+        btn_click_event();
+        state_change_table();
     });
-
 </script>
 {% endblock %}
 {% block title %} 재고관리 페이지 {% endblock %}
@@ -68,8 +126,8 @@
 {% block body %}
 <form class="form-inline" action="/search" method="POST">
     <div class="row container-fluid">
-        <input type="date" name="startDate" value={{now_sdate}} class="col-2 btn-primary">
-        <input type="date" name="endDate" value={{now_edate}} class="col-2 btn-primary date_box">
+        <input type="date" name="startDate" value={{object.date()}} class="col-2 btn-primary">
+        <input type="date" name="endDate" value={{object.date()}} class="col-2 btn-primary date_box">
         <input type="hidden" name="page" value="p_page"/>
         <button type="submit" class="btn col-1 btn-warning">검색</button>
     </div>
@@ -77,7 +135,7 @@
 <hr/>
 <div class="row container-fluid">
     <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
-    <button type="button" class="btn btn-primary col-1">필터 예정</button>
+    <button type="button" id="selectBtn" class="btn btn-primary col-1 pull-right">필터 예정</button>
     <a href="/insert_plan" class="btn btn-warning col-1 offset-3"
        onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
     <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">상태 변경
@@ -85,102 +143,33 @@
     <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록</button>
 </div>
 <hr/>
-<div class="table-responsive">
-    {% if rows[0] %}
-    <table class="table table-striped table-bordered">
-        <thead class="thead-dark">
-        <tr>
-            <th>모델명</th>
-            <th>시리얼 넘버</th>
-            <th>생산 주차</th>
-            <th>위치</th>
-            <th>상태</th>
-            <th>추적</th>
-        </thead>
-        <tbody>
-        {% for row in rows %}
-        {% for key, val in row.items() %}
-        <tr>
-            <th> {{ key }}</th>
-            <th> {{ val }}</th>
-            <th>
-                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히
-                </button>
-            </th>
-        </tr>
-        {% endfor %}
-        {% endfor %}
-        </tbody>
-    </table>
-    {% else %}
-    <h3> No Notice in the Database</h3>
-    {% endif %}
+{% if object.production_main_all_list()[0] %}
+<input hidden id="checked_list" value="{{ object.production_main_checked_list() }}"/>
+<input hidden id="all_list" value="{{ object.production_main_all_list() }}"/>
+<table class="table table-striped table-bordered" id="main_table">
+    <thead class="thead-dark">
+    <tr>
+        <th>모델명</th>
+        <th>시리얼 넘버</th>
+        <th>생산 주차</th>
+        <th>위치</th>
+        <th>상태</th>
+        <th>추적</th>
+    </tr>
+    </thead>
+    <tbody>
+    <!--  Call of the Java Script Function (table) -->
+    </tbody>
+</table>
+{% else %}
+<h3> No Notice in the Database</h3>
+{% endif %}
 </div>
-<!-- The Modal -->
-<div class="modal fade" id="shipment_modal">
-    <div class="modal-dialog modal-lg">
-        <form class="form-inline" action="/shipment_data" method="POST" enctype=multipart/form-data>
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header text-white bg-secondary">
-                    <h1 class="page-header">상태 변경 화면</h1>
-                </div>
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <div class="table-responsive">
-                        {% if shipment_modal_rows[0] %}
-                        <table class="table table-striped table-bordered">
-                            <thead class="thead-dark">
-                            <tr>
-                                <th>모델명</th>
-                                <th>시리얼넘버</th>
-                                <th>위치</th>
-                                <th>상태</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for row in shipment_modal_rows %}
-                            <tr>
-                                <th>
-                                    <div class="checkbox">
-                                        <input type="checkbox" name="check_box"
-                                               value="{{ row['_id'] }}"/> {{ row["model"] }}
-                                        <input type="hidden" name="id" value='{{ row["_id"] }}'/>
-                                    </div>
-                                </th>
-                                <th> {{ row["sn"] }}</th>
-                                <th><input type="text" class="form-control" name="location"
-                                           value='{{ row["location"] }}'></th>
-                                <th><select class="form-control" name="state" value='{{ row["state"] }}'>
-                                    <option selected hidden value='{{ row["state"] }}'>{{ row["state"] }}</option>
-                                    <option>재고</option>
-                                    <option>판매</option>
-                                    <option>기증</option>
-                                    <option>내수용</option>
-                                    <option>A/S 입고</option>
-                                    <option>불량</option>
-                                    <option>폐기</option>
-                                </select></th>
-                            </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                        {% else %}
-                        <h3> No Notice in the CheckBox</h3>
-                        <input type="hidden" name="data_empty" value='{{ true }}'/>
-                        {% endif %}
-                    </div>
-                </div>
-                <!-- Modal Footer -->
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-warning">확 인
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- The Modal -->
+<hr>
+<div class="col-lg-12" id="ex3_Result1"></div>
+<div class="col-lg-12" id="ex3_Result2"></div>
+
+<!-- The Product Insert Modal -->
 <div class="modal fade" id="insert_modal">
     <div class="modal-dialog modal-lg">
         <form class="form-inline" action="/insert_data" method="POST" enctype=multipart/form-data>
@@ -202,7 +191,7 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <th>
+                                <td>
                                     <select class="from-control" id="insert_model" name="model">
                                         <option>Indy3</option>
                                         <option>Indy5</option>
@@ -212,7 +201,7 @@
                                         <option>Core</option>
                                         <option>Conty</option>
                                     </select>
-                                </th>
+                                </td>
                                 <th>
                                     <input type="text" class="form-control" id="insert_sn" name="sn"></th>
                                 <th>
@@ -231,7 +220,48 @@
         </form>
     </div>
 </div>
-<!-- The Modal -->
+<!-- Modify State The Modal -->
+<div class="modal fade" id="shipment_modal">
+    <div class="modal-dialog modal-lg">
+        <form class="form-inline" action="/shipment_data" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header text-white bg-secondary">
+                    <h1 class="page-header">상태 변경 화면</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        {% if object.production_main_all_list()[0] %}
+                        <table class="table table-striped table-bordered" id="state_table">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>모델명</th>
+                                <th>시리얼 넘버</th>
+                                <th>위치</th>
+                                <th>상태</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <!--  Call of the Java Script Function (table) -->
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <h3> No Notice in the CheckBox</h3>
+                        <input type="hidden" name="data_empty" value='{{ true }}'/>
+                        {% endif %}
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-warning">확 인
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- The Detail Console Modal -->
 <div class="modal fade" id="detail_modal">
     <div class="modal-dialog modal-lg">
         <form class="form-inline" action="/detail_modal" method="POST" enctype=multipart/form-data>
@@ -242,7 +272,7 @@
                 </div>
                 <!-- Modal Body -->
                 <div class="modal-body">
-                    {% if crows[0] %}
+                    {% if object.production_main_checked_list()[0] %}
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered">
                             <thead class="thead-dark">
@@ -253,13 +283,13 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for row2 in crows %}
+                            {% for row in object.production_main_checked_list() %}
                             <tr>
-                                <th name="s_date">{{ crows[0]['sdate'] }}
+                                <th name="s_date">{{ row.week }}
                                 </th>
-                                <th name="s_dloca">{{ crows[0]['sloca'] }}
+                                <th name="s_dloca">{{ row.location }}
                                 </th>
-                                <th name="s_data">{{ crows[0]['sdata'] }}
+                                <th name="s_data">{{ row.state }}
                                 </th>
                             </tr>
                             {% endfor %}
