--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -25,22 +25,49 @@
     function main_table() {
         var product_row = $('#all_list').val();
         var product_info_row = $('#checked_list').val();
+        var specific_date_row = $('#specific_date_list').val();
+        console.log(product_row);
+        console.log(product_info_row);
+        console.log(specific_date_row);
+        console.log(specific_date_row.length);
+        console.log(typeof(specific_date_row));
         product_row = JSON_parse_convertor(product_row);
         product_info_row = JSON_parse_convertor(product_info_row);
 
-        if (product_row.length != product_info_row.length) {
-            alert("DB Length is wrong !");
+        if (specific_date_row.length != 0) {
+            console.log("Specific date search");
+            specific_date_row = JSON_parse_convertor(specific_date_row);
+            for (var i = 0; i < specific_date_row[0].length; i++) {
+                $('#main_table').append(
+                    $('<tr>').append(
+                        //$('<td><input type="checkbox" name="main_checkbox"/>').append(specific_date_row[1][i]['model']),
+                        $('<td>').append(specific_date_row[1][i]['model']),
+                        $('<td>').append(specific_date_row[1][i]['sn']),
+                        $('<td>').append(specific_date_row[0][i]['week']),
+                        $('<td>').append(specific_date_row[0][i]['location'][specific_date_row[0][i]['location'].length - 1]),
+                        $('<td>').append(specific_date_row[0][i]['state'][specific_date_row[0][i]['state'].length - 1]),
+                        $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>'))
+                );
+                document.getElementsByName("detail_btn")[i].value = specific_date_row[0][i]['product_id'];
+            }
         }
-        for (var i = 0; i < product_row.length; i++) {
-            $('#main_table').append(
-                $('<tr>').append(
-                    $('<td><input type="checkbox" name="main_checkbox"/>').append(product_row[i]['model']),
-                    $('<td>').append(product_row[i]['sn']),
-                    $('<td>').append(product_info_row[i]['week']),
-                    $('<td>').append(product_info_row[i]['location'][product_info_row[i]['location'].length - 1]),
-                    $('<td>').append(product_info_row[i]['state'][product_info_row[i]['state'].length - 1]),
-                    $('<td><button type="button" class="btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>'))
-            );
+
+        else if (product_row.length != product_info_row.length) {
+            alert("DB Length is wrong !");
+        }else{
+            for (var i = 0; i < product_row.length; i++) {
+                $('#main_table').append(
+                    $('<tr>').append(
+                        //$('<td><input type="checkbox" name="main_checkbox"/>').append(product_row[i]['model']),
+                        $('<td>').append(product_row[i]['model']),
+                        $('<td>').append(product_row[i]['sn']),
+                        $('<td>').append(product_info_row[i]['week']),
+                        $('<td>').append(product_info_row[i]['location'][product_info_row[i]['location'].length - 1]),
+                        $('<td>').append(product_info_row[i]['state'][product_info_row[i]['state'].length - 1]),
+                        $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>'))
+                );
+                document.getElementsByName("detail_btn")[i].value = product_info_row[i]['product_id'];
+            }
         }
     }
 
@@ -75,6 +102,40 @@
             document.getElementsByName("location")[i].value = product_info_row[i]['location'][product_info_row[i]['location'].length - 1];
             document.getElementsByName("states")[i].value = product_info_row[i]['state'][product_info_row[i]['state'].length - 1];
         }
+    }
+
+    function detail_tabler() {
+        $(".detail_btn_class").click(function () {
+            // Table initialization
+            $('#detail_table > tbody:last').empty();
+
+            var product_info_row = $('#checked_list').val();
+            var received_id = $(this).val();
+            var _date, _location, _state;
+            product_info_row = JSON_parse_convertor(product_info_row);
+
+            for (var j = 0; j < product_info_row.length; j++) {
+                if (received_id == product_info_row[j]['product_id']) {
+                    _date = product_info_row[j]['updated_date'];
+                    _location = product_info_row[j]['location'];
+                    _state = product_info_row[j]['state'];
+                }
+            }
+            //console.log(_date);
+            //console.log(_location);
+            //console.log(_state);
+            if (product_info_row.length != product_info_row.length) {
+                alert("DB Length is wrong !");
+            }
+            for (var i = 0; i < _date.length; i++) {
+                $('#detail_table').append(
+                    $('<tr>').append(
+                        $('<td>').append(_date[i]),
+                        $('<td>').append(_location[i]),
+                        $('<td>').append(_state[i]))
+                );
+            }
+        });
     }
 
     function btn_click_event() {
@@ -117,6 +178,7 @@
         main_table();
         btn_click_event();
         state_change_table();
+        detail_tabler();
     });
 </script>
 {% endblock %}
@@ -134,7 +196,8 @@
 </form>
 <hr/>
 <div class="row container-fluid">
-    <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
+    <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
+    <button type="button" class="btn btn-primary col-1" onclick="location.href='/'">전체</button>
     <button type="button" id="selectBtn" class="btn btn-primary col-1 pull-right">필터 예정</button>
     <a href="/insert_plan" class="btn btn-warning col-1 offset-3"
        onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
@@ -144,8 +207,9 @@
 </div>
 <hr/>
 {% if object.production_main_all_list()[0] %}
-<input hidden id="checked_list" value="{{ object.production_main_checked_list() }}"/>
+<input hidden id="checked_list" value="{{ object.production_main_info_list() }}"/>
 <input hidden id="all_list" value="{{ object.production_main_all_list() }}"/>
+<input hidden id="specific_date_list" value="{{ date_rows }}"/>
 <table class="table table-striped table-bordered" id="main_table">
     <thead class="thead-dark">
     <tr>
@@ -168,6 +232,7 @@
 <hr>
 <div class="col-lg-12" id="ex3_Result1"></div>
 <div class="col-lg-12" id="ex3_Result2"></div>
+<!-- Test Part -->
 
 <!-- The Product Insert Modal -->
 <div class="modal fade" id="insert_modal">
@@ -223,7 +288,7 @@
 <!-- Modify State The Modal -->
 <div class="modal fade" id="shipment_modal">
     <div class="modal-dialog modal-lg">
-        <form class="form-inline" action="/shipment_data" method="POST" enctype=multipart/form-data>
+        <form class="form-inline" action="/state_change" method="POST" enctype=multipart/form-data>
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header text-white bg-secondary">
@@ -272,27 +337,18 @@
                 </div>
                 <!-- Modal Body -->
                 <div class="modal-body">
-                    {% if object.production_main_checked_list()[0] %}
+                    {% if object.production_main_info_list()[0] %}
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered">
+                        <table class="table table-striped table-bordered" id="detail_table">
                             <thead class="thead-dark">
                             <tr>
-                                <th>날 짜</th>
-                                <th>위 치</th>
-                                <th>상 태</th>
+                                <th>날짜</th>
+                                <th>위치</th>
+                                <th>상태</th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for row in object.production_main_checked_list() %}
-                            <tr>
-                                <th name="s_date">{{ row.week }}
-                                </th>
-                                <th name="s_dloca">{{ row.location }}
-                                </th>
-                                <th name="s_data">{{ row.state }}
-                                </th>
-                            </tr>
-                            {% endfor %}
+                            <!--  Call of the Java Script Function (table) -->
                             </tbody>
                         </table>
                         {% else %}
