--- a/FlaskServer/templates/test.html
+++ b/FlaskServer/templates/test.html
@@ -321,9 +321,9 @@
 </script>
 <hr>
 <div>
-    <input hidden id="real_test" name="view_test" value="{{ object.production_main_checked_list() }}"/>
+    <input hidden id="real_test" name="view_test" value="{{ object.production_main_info_list() }}"/>
     <input hidden id="real_value" name="view_test" value="{{ object.production_main_all_list() }}"/>
-    {{ object.production_main_checked_list() }}{{ object.production_main_all_list() }}
+    {{ object.production_main_info_list() }}{{ object.production_main_all_list() }}
 </div>
 
 <hr>
@@ -376,5 +376,104 @@
         }
 
     });
+</script>
+
+<script>
+    $(document).ready(function () {
+
+        $("#selectBtn").click(function () {
+            alert('hi');
+            var rowData = new Array();
+            var tdArr = new Array();
+            var checkbox = $("input[name=user_CheckBox]:checked");
+
+            // 체크된 체크박스 값을 가져온다
+            checkbox.each(function (i) {
+
+                // checkbox.parent() : checkbox의 부모는 <td>이다.
+                // checkbox.parent().parent() : <td>의 부모이므로 <tr>이다.
+                var tr = checkbox.parent().parent().eq(i);
+                var td = tr.children();
+
+                // 체크된 row의 모든 값을 배열에 담는다.
+                rowData.push(tr.text());
+
+                // td.eq(0)은 체크박스 이므로  td.eq(1)의 값부터 가져온다.
+                var no = td.eq(1).text() + ", "
+                var userid = td.eq(2).text() + ", ";
+                var name = td.eq(3).text() + ", ";
+                var email = td.eq(4).text() + ", ";
+
+                // 가져온 값을 배열에 담는다.
+                tdArr.push(no);
+                tdArr.push(userid);
+                tdArr.push(name);
+                tdArr.push(email);
+
+                //console.log("no : " + no);
+                //console.log("userid : " + userid);
+                //console.log("name : " + name);
+                //console.log("email : " + email);
+            });
+
+            $("#ex3_Result1").html(" * 체크된 Row의 모든 데이터 = " + rowData);
+            $("#ex3_Result2").html(tdArr);
+        });
+
+        // 체크 박스 모두 체크
+        $("#checkAll").click(function () {
+            $("input[name=box]:checkbox").each(function () {
+                $(this).attr("checked", true);
+            });
+        });
+
+        // 체크 박스 모두 해제
+        $("#uncheckAll").click(function () {
+            $("input[name=box]:checkbox").each(function () {
+                $(this).attr("checked", false);
+            });
+        });
+
+        // 체크 되어 있는 값 추출
+        $("#getCheckedAll").click(function () {
+            $("input[name=box]:checked").each(function () {
+                var test = $(this).val();
+                alert(test);
+            });
+        });
+
+        // 서버에서 받아온 데이터 체크하기 (콤마로 받아온 경우)
+        $("#updateChecked").click(function () {
+            var splitCode = $("#splitCode").val().split(",");
+            for (var idx in splitCode) {
+                $("input[name=box][value=" + splitCode[idx] + "]").attr("checked", true);
+            }
+        });
+
+        // test case
+        test1();
+    });
+
+    function test1() {
+        console.log("################################################");
+        console.log("## test1 START");
+        console.log("################################################");
+
+        //var cnt = $("input:checkbox").size();
+        //console.log("checkboxSize=" + cnt);
+
+        $("input[name=box]:checkbox").each(function () {
+            var checkboxValue = $(this).val();
+            console.log("checkboxValue=" + checkboxValue);
+        });
+
+        console.log("----------------------------------------------");
+
+        $("#checkboxArea").children().each(function () {
+            var checkboxValue = $(this).children(":checkbox").val();
+            var text = $(this).children().eq(1).text();
+            console.log(text + "=" + checkboxValue);
+        });
+    }
 </script>
 {% endblock %}
